--- a/src/main/resources/templates/usuario_registro.html
+++ b/src/main/resources/templates/usuario_registro.html
@@ -1,83 +1,95 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.thymeleaf.org" lang="en">
 
 <head>
-    <meta charset="ISO-8859-1">
-    <title th:text="'Ausys - '+ ${titulo}"></title>
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+		integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+		integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+		crossorigin="anonymous"></script>
+	<link rel="stylesheet" th:href="@{/styles.css}">
+	<title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
-    <div class="container text-center">
-        <div>
-            <h1>Registro de Usuario </h1>
-        </div>
-        <form th:action="@{/validar_usuario}" th:object="${usuario}" method="post" style="max-width: 600px; margin: 0 auto;">
-            <div class="m-3">
-
-                
-
-
-                <div class="form-group row">
-                    <label class="col-4 col-form-label">Usuario: </label>
-                    <div class="col-8">
-                        <input type="text" th:field="*{username}" class="form-control" required />
-
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-4 col-form-label">Contraseña: </label>
-                    <div class="col-8">
-                        <input type="password" th:field="*{password}" class="form-control" required minlength="6" maxlength="20" />
-
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-4 col-form-label">Nombre: </label>
-                    <div class="col-8">
-                        <input type="text" th:field="*{nombre}" class="form-control" required minlength="2"
-                            maxlength="20" />
-
-                    </div>
-
-                    <div class="form-group row">
-                        <label class="col-4 col-form-label">Apellido: </label>
-                        <div class="col-8">
-                            <input type="text" th:field="*{apellido}" class="form-control" required minlength="2"
-                                maxlength="20" />
-
-                        </div>
-                    </div>
-                    
-                    
-                    <select hidden class="form-control" name="enabled_u" id="estado" th:field="${usuario.enabled_u}">
-                        <option th:value="${true}">Activa</option>
-                    </select>       
-
-
-                    <label class="col-form-label">Roles: </label>
-                    <select class="form-control" id="divisionSelect" th:field="*{rol.id_rol}">
-                        <option value="col2">Selecciona una opci&oacute;n</option>
-                        <option th:each="rol : ${roles}"
-                        th:id="${rol.id_rol}" th:value="${rol.id_rol}"
-                        th:text="${rol.rol}"></option>
-                    </select>
+	<th:block th:replace="components/navbar :: navbar"></th:block>
+	<div class="container text-center">
+		<div>
+			<h1>Registro de Usuario </h1>
+		</div>
+		<form th:action="@{/validar_usuario}" th:object="${usuario}" method="post"
+			style="max-width: 600px; margin: 0 auto;">
+			<div class="m-3">
 
 
 
 
-                    <div>
-                        <button type="submit" class="btn btn-primary">Registrar</button>
-                    </div>
-                </div>
-        </form>
-    </div>
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Usuario: </label>
+					<div class="col-8">
+						<input type="text" th:field="*{username}" class="form-control" required />
+
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Contraseña: </label>
+					<div class="col-8">
+						<input type="password" th:field="*{password}" class="form-control" required minlength="6"
+							maxlength="20" />
+
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Nombre: </label>
+					<div class="col-8">
+						<input type="text" th:field="*{nombre}" class="form-control" required minlength="2"
+							maxlength="20" />
+
+					</div>
+
+					<div class="form-group row">
+						<label class="col-4 col-form-label">Apellido: </label>
+						<div class="col-8">
+							<input type="text" th:field="*{apellido}" class="form-control" required minlength="2"
+								maxlength="20" />
+
+						</div>
+					</div>
+
+
+					<select hidden class="form-control" name="enabled_u" id="estado" th:field="${usuario.enabled_u}">
+						<option th:value="${true}">Activa</option>
+					</select>
+
+
+					<label class="col-form-label">Roles: </label>
+					<select class="form-control" id="divisionSelect" th:field="*{rol.id_rol}">
+						<option value="col2">Selecciona una opci&oacute;n</option>
+						<option th:each="rol : ${roles}" th:id="${rol.id_rol}" th:value="${rol.id_rol}"
+							th:text="${rol.rol}"></option>
+					</select>
+
+
+
+
+					<div>
+						<button type="submit" class="btn btn-primary">Registrar</button>
+					</div>
+				</div>
+		</form>
+	</div>
 </body>
 
 </html>
