--- a/src/main/resources/templates/usuario_registro.html
+++ b/src/main/resources/templates/usuario_registro.html
@@ -27,7 +27,7 @@
 		<div>
 			<h1>Registro de Usuario </h1>
 		</div>
-		<form th:action="@{/validar_usuario}" th:object="${usuario}" method="post"
+		<form th:action="@{/admin/validar_usuario}" th:object="${usuario}" method="post"
 			style="max-width: 600px; margin: 0 auto;">
 			<div class="m-3">
 
