--- a/src/main/resources/templates/IngresarDesaparecido2.html
+++ b/src/main/resources/templates/IngresarDesaparecido2.html
@@ -26,7 +26,7 @@
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:action="@{/validarDesaparecido2}" th:object="${desaPeri}" method="POST">
+            <form th:action="@{/write/validarDesaparecido2}" th:object="${desaPeri}" method="POST">
                 <input type="hidden" th:field="*{tipo_de_caso}">
                 <br>
                 <th:block th:replace="components/form-registros :: registros"></th:block>
