--- a/src/main/resources/templates/ingresarFoto.html
+++ b/src/main/resources/templates/ingresarFoto.html
@@ -26,7 +26,7 @@
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:if="${val} == 'Desaparecido'" th:action="@{/subir/D/} + ${id}" th:object="${foto}"
+            <form th:if="${val} == 'Desaparecido'" th:action="@{/write/subir/D/} + ${id}" th:object="${foto}"
                 enctype="multipart/form-data" method="POST">
                 <br>
 
@@ -37,7 +37,7 @@
                 <input type="submit" value="Siguiente" class="btn btn-primary">
 
             </form>
-            <form th:if="${val} == 'Peritaje'" th:action="@{/subir/P/} + ${id}" th:object="${foto}"
+            <form th:if="${val} == 'Peritaje'" th:action="@{/write/subir/P/} + ${id}" th:object="${foto}"
                 enctype="multipart/form-data" method="POST">
                 <br>
 
