--- a/src/main/resources/templates/editarPeritaje.html
+++ b/src/main/resources/templates/editarPeritaje.html
@@ -26,7 +26,7 @@
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:action="@{/editar/peritaje2/} + ${id_peritajeParam} + '/' + ${id_desaperiParam}"
+            <form th:action="@{/write/editar/peritaje2/} + ${id_peritajeParam} + '/' + ${id_desaperiParam}"
                 th:object="${peritaje}" method="GET">
 
                 <input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
