--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,13 +33,13 @@
             <li><a th:href="@{/write/ingresarPeritaje}">Ingresar Peritaje</a></li>
             <li><a th:href="@{/write/ingresarDesaparecido}">Ingresar Desaparecido</a></li>
             <p>Estadistica y Secretaria</p>
-            <li><a th:href="@{/listaPeritajes}">Lista Peritajes</a></li>
-            <li><a th:href="@{/listaDesaparecidos}">Lista Desaparecidos</a></li>
+            <li><a th:href="@{/read/listaPeritajes}">Lista Peritajes</a></li>
+            <li><a th:href="@{/read/listaDesaparecidos}">Lista Desaparecidos</a></li>
             <p>Solo secretaria</p>
-            <li><a th:href="@{/listaRegistros}">Lista Registros</a></li>
-            <li><a th:href="@{/graficar}">Graficar</a></li>
-            <li><a th:href="@{/buscarPeritajes}">Buscar Peritajes</a></li>
-            <li><a th:href="@{/buscarDesaparecidos}">Buscar Desaparecidos</a></li>
+            <li><a th:href="@{/show/listaRegistros}">Lista Registros</a></li>
+            <li><a th:href="@{/show/graficar}">Graficar</a></li>
+            <li><a th:href="@{/show/buscarPeritajes}">Buscar Peritajes</a></li>
+            <li><a th:href="@{/show/buscarDesaparecidos}">Buscar Desaparecidos</a></li>
         </ul>
     </div>
 </body>
