--- a/src/main/resources/templates/listaDesaparecidos.html
+++ b/src/main/resources/templates/listaDesaparecidos.html
@@ -48,21 +48,21 @@
                     <td>
                         <div class="d-flex">
                             <form class="p-1"
-                                th:action="@{/verRegistroD/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
+                                th:action="@{/read/verRegistroD/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
                                 method="GET">
                                 <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                 <input type="submit" class="btn btn-primary" value="Ver">
                             </form>
                             <form class="p-1"
-                                th:action="@{/editar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
+                                th:action="@{/write/editar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
                                 method="GET">
                                 <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                 <input type="submit" class="btn btn-success" value="Editar">
                             </form>
                             <form class="p-1"
-                                th:action="@{/eliminar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
+                                th:action="@{/main/eliminar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
                                 method="GET">
                                 <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
