--- a/src/main/resources/templates/listaPeritajes.html
+++ b/src/main/resources/templates/listaPeritajes.html
@@ -48,7 +48,7 @@
                     <td>
                         <div class="d-flex">
                             <form class="p-1"
-                                th:action="@{/verRegistro/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
+                                th:action="@{/read/verRegistro/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
                                 method="GET">
                                 <input th:name="peritajeName" type="hidden" th:value="${desaPeri.nombre}">
                                 <input th:name="peritajeLastname" type="hidden" th:value="${desaPeri.apellido}">
@@ -57,14 +57,14 @@
                                 <input type="submit" class="btn btn-primary" value="Ver">
                             </form>
                             <form class="p-1"
-                                th:action="@{/editar/peritaje/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
+                                th:action="@{/write/editar/peritaje/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
                                 method="GET">
                                 <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                 <input type="submit" class="btn btn-success" value="Editar">
                             </form>
                             <form class="p-1"
-                                th:action="@{/eliminar/peritaje/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
+                                th:action="@{/main/eliminar/peritaje/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
                                 method="GET">
                                 <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
