Adaptacion a relacion de tablas

--- a/src/main/resources/templates/components/form-foto.html
+++ b/src/main/resources/templates/components/form-foto.html
@@ -1,7 +1,7 @@
 <section th:fragment="foto">
 
     <div>
-        <input type="file" th:name="img" th:id="img">
+        <input type="file" th:name="img" th:id="img" accept="image/*">
     </div>
     <br>
 </section>
