--- a/src/main/resources/templates/ingresarFoto.html
+++ b/src/main/resources/templates/ingresarFoto.html
@@ -2,55 +2,75 @@
 <html xmlns="http://www.thymeleaf.org" lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+		integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" th:href="@{/styles.css}">
-    <title th:text="'Ausys - '+ ${titulo}"></title>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+		integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+		crossorigin="anonymous"></script>
+	<link rel="stylesheet" th:href="@{/styles.css}">
+	<title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
-    <th:block th:replace="components/navbar :: navbar"></th:block>
-    <div class="container">
-        <h1 th:text="${titulo}"></h1>
-        <div>
-            <form th:if="${val} == 'Desaparecido'" th:action="@{/write/subir/D/} + ${id}" th:object="${foto}"
-                enctype="multipart/form-data" method="POST">
-                <br>
+	<th:block th:replace="components/navbar :: navbar"></th:block>
+	<div class="container">
+		<h1 th:text="${titulo}"></h1>
+		<div>
+			<form th:if="${val} == 'Desaparecido'" th:action="@{/write/subir/D/} + ${id}" th:object="${foto}"
+				enctype="multipart/form-data" method="POST">
+				<br>
 
-                <th:block th:replace="components/form-foto :: foto"></th:block>
-                <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
-                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
-                <br>
-                <input type="submit" value="Siguiente" class="btn btn-primary">
+				<th:block th:replace="components/form-foto :: foto"></th:block>
+				<!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
+				<div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
+				<br>
+				<input type="submit" value="Siguiente" class="btn btn-primary">
 
-            </form>
-            <form th:if="${val} == 'Peritaje'" th:action="@{/write/subir/P/} + ${id}" th:object="${foto}"
-                enctype="multipart/form-data" method="POST">
-                <br>
+			</form>
+			<form th:if="${val} == 'Peritaje'" th:action="@{/write/subir/P/} + ${id}" th:object="${foto}"
+				enctype="multipart/form-data" method="POST">
+				<br>
 
-                <th:block th:replace="components/form-foto :: foto"></th:block>
-                <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
-                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
-                <br>
-                <input type="submit" value="Siguiente" class="btn btn-primary">
+				<th:block th:replace="components/form-foto :: foto"></th:block>
+				<!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
+				<div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
+				<br>
+				<input type="submit" value="Siguiente" class="btn btn-primary">
 
-            </form>
-        </div>
-    </div>
+			</form>
+		</div>
+	</div>
+	<script type="text/javascript">
+		$(document).ready(function () {
+			maxSize = 20 * 1024 * 1024;
+			var fileExtension = ['jpeg', 'jpg', 'png'];
 
+			$("#img").change(function () {
+				imgSize = this.files[0].size;
+				if (imgSize > maxSize) {
+					this.setCustomValidity("Su archivo supera el maximo de tamaño permitido. 20MB.");
+					this.reportValidity();
+				}
+				else if ($.inArray($(this).val().split('.').pop().toLowerCase(), fileExtension) == -1) {
+					this.setCustomValidity("Solo se permiten archivos de tipo:" + fileExtension.join(','));
+					this.reportValidity();
+				}
+				else {
+					this.setCustomValidity("");
+				}
+			});
+		});
+	</script>
 </body>
 
 </html>
