--- a/src/main/resources/templates/listaUsuario.html
+++ b/src/main/resources/templates/listaUsuario.html
@@ -64,7 +64,7 @@
                                 
                             </form>
                             <form class="p-1"
-                                th:action="@{/eliminar/usuario/} + ${user.id_usuario}"
+                                th:action="@{/admin/eliminar/usuario/} + ${user.id_usuario}"
                                 method="GET">
                                 <input th:name="id_usuario" hidden th:value=${user.id_usuario}>
                              	<input type="submit" class="btn btn-danger" value="Eliminar"
