--- a/src/main/resources/templates/listaUsuario.html
+++ b/src/main/resources/templates/listaUsuario.html
@@ -57,11 +57,11 @@
                                 -->
                             
                             <form class="p-1"
-                                th:action="@{/editar/usuario/{id_usuario}} + ${user.id_usuario} "
+                                th:action="@{/admin/editar/usuario/} + ${user.id_usuario} "
                                 method="GET">
-                                <input th:name="user.id_usuario" type="hidden" th:value=${user.id_usuario}>
-                                <input type="submit" class="btn btn-success" value="Desabilitar">
-                                
+                                <input th:name="id_usuario" hidden th:value=${user.id_usuario}>
+                                <input th:if="${user.enabled_u} == true" type="submit" class="btn btn-success" value="Desabilitar">
+                                <input th:unless="${user.enabled_u} == true" type="submit" class="btn btn-success" value="Habilitar">
                             </form>
                             <form class="p-1"
                                 th:action="@{/admin/eliminar/usuario/} + ${user.id_usuario}"
