--- a/src/main/resources/templates/IngresarPeritaje.html
+++ b/src/main/resources/templates/IngresarPeritaje.html
@@ -66,7 +66,7 @@
                 <select class="form-control" id="divisionSelect" th:field="*{division.id_division}">
                     <option value="col2">Selecciona una opci&oacute;n</option>
                     <option th:each="division : ${divisiones}"
-                        th:id="${division.municipio.departamento.id_departamento}" th:value="${division.id_division}"
+                        th:id="${division.municipio.id_municipio}" th:value="${division.id_division}"
                         th:text="${division.division}"></option>
                 </select>
 
